--- a/index.html
+++ b/index.html
@@ -63,25 +63,28 @@
       </div>
       <ul>
         <li>
-          <a href="#"> <span></span> TOP <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#"> <span></span> トップ <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#about"> <span></span> ABOUT <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#about"> <span></span> サロンについて <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#works"> <span></span> WORKS <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#works"> <span></span> サービス内容 <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#service"> <span></span> SERVICE <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#service"> <span></span> 施術の流れ <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#media"> <span></span> MEDIA <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#media"> <span></span> お客様の声 <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#partner"> <span></span> PARTNER <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#partner"> <span></span> よくあるご質問 <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#contact" target="_blank" rel="noopener noreferrer">CONTACT</a>
+          <a href="#partner"> <span></span> 公式サイト <i class="fa-solid fa-chevron-right"></i></a>
+        </li>
+        <li>
+          <a href="#contact" target="_blank" rel="noopener noreferrer">お問い合わせ</a>
         </li>
       </ul>
     </nav>
@@ -189,6 +192,7 @@
       <div class="wrapper">
         <img class="pc" src="img/bg-message.png" alt="">
         <img class="sp" src="img/bg-message-sp.png" alt="">
+        <img class="sp2" src="img/bg-message-sp2.png" alt="">
         <h2>
           <div class="text pc">
             <p>大切な家族だから、マッサージによる『ケア』と『予防』で</p>
@@ -198,8 +202,19 @@
             <p>楽しく健康的な毎日を。</p>
             <img src="img/dotted2.png" alt="">
           </div>
-          <div class="text-sp sp">
-            <p>大切な家族だから、マッサージによる『ケア』と『予防』で楽しく健康的な毎日を。</p>
+          <div class="text-sp-wrapper sp">
+            <div class="text-sp">
+              <p>大切な家族だから、</p>
+              <img src="img/message-dotted1-sp.png" alt="">
+            </div>
+            <div class="text-sp">
+              <p>マッサージによる『ケア』と『予防』で</p>
+              <img src="img/message-dotted2-sp.png" alt="">
+            </div>
+            <div class="text-sp">
+              <p>楽しく健康的な毎日を。</p>
+              <img src="img/message-dotted3-sp.png" alt="">
+            </div>
           </div>
         </h2>
         <p>わんちゃんが健康で楽しく、幸せに暮らせるかは、毎日一緒にいる飼い主さん次第。<br>そして、わんちゃんも『家族』だからこそ、最後の刻まで、元気にお散歩したり、遊んだり、お出かけしたり、一緒に好きなこと、楽しいことを長く続けられる身体で毎日を笑顔で過ごす。一緒に幸せな時間を過ごすために、飼い主さんとわんちゃんの健康なくしては何も出来ません。<br>わんちゃんが『辛い』『痛い』と感じる前に、わんちゃんの『ケア』と『予防』ができる保健室のような存在がある事で、より楽しく安心して充実した毎日を一緒に過ごせます。</p>
@@ -241,6 +256,7 @@
           </div>
         </div>
       </div>
+      <img class="sp2 home-illust" src="img/home-illust-sp2.png" alt="">
     </div>
   </section>
 
@@ -302,8 +318,7 @@
             </div>
             <p class="price">45分<br>2,980円（税込）</p>
             <img src="img/service-img1.png" alt="わんちゃんの画像">
-            <p class="notice">※時間は対面からアフターカウンセリングまでの
-            時間です。</p>
+            <p class="notice">※時間は対面からアフターカウンセリングまでの時間です。</p>
             <p class="osusume">こんなわんちゃんにおすすめ</p>
             <ul>
               <li>お留守番が多い</li>
@@ -315,13 +330,12 @@
           <div class="service">
             <p class="info">【9月開始】</p>
             <div class="service-name">
-              <p><br>動物温灸<br></p>
+              <p><br class="pc">動物温灸<br class="pc"></p>
               <img src="img/service-dots2.png" alt="">
             </div>
-            <p class="price"><br>comming soon</p>
+            <p class="price"><br class="pc">comming soon</p>
             <img src="img/service-img2.png" alt="わんちゃんの画像">
-            <p class="notice">※時間は対面からアフターカウンセリングまでの
-            時間です。</p>
+            <p class="notice">※時間は対面からアフターカウンセリングまでの時間です。</p>
             <p class="osusume">こんなわんちゃんにおすすめ</p>
             <ul>
               <li>鼻水が出やすい</li>
@@ -341,8 +355,7 @@
             </div>
             <p class="price">110-135分<br>10,980円（税込）</p>
             <img src="img/service-img3.png" alt="わんちゃんの画像">
-            <p class="notice">※時間は対面からアフターカウンセリングまでの
-            時間です。</p>
+            <p class="notice">※時間は対面からアフターカウンセリングまでの時間です。</p>
             <p class="osusume">こんな飼い主さんにおすすめ</p>
             <ul>
               <li>散歩程度の運動しかできていない方</li>
@@ -353,9 +366,19 @@
           </div>
         </div>
         <p class="notice2">※出張料金に関しましては「よくある質問」をご覧ください。</p>
-        <div class="notice3">
+        <div class="notice3 pc">
           <p>こころえくれれでは、売上の一部を保護猫・保護犬団体に寄付します。</p>
-          <img src="img/dots-notice.png" alt="">
+          <img class="pc" src="img/dots-notice.png" alt="">
+        </div>
+        <div class="notice3 sp">
+          <div class="text-wrapper">
+            <p>こころえくれれでは、売上の一部を</p>
+            <img src="img/dots-notice sp1.png" alt="">
+          </div>
+          <div class="text-wrapper">
+            <p>保護猫・保護犬団体に寄付します。</p>
+            <img src="img/dots-notice sp2.png" alt="">
+          </div>
         </div>
         <div class="btn">
           <a href="">ご予約はこちらから</a>
@@ -364,7 +387,9 @@
     </div>
   </section>
 
-  <img src="img/bg-wabe1.png" alt="">
+  <div class="wave-img-wrapper">
+    <img src="img/bg-wabe1.png" alt="">
+  </div>
 
   <section class="flow">
     <div class="container">
@@ -378,31 +403,36 @@
             <h3>ご予約</h3>
             <img src="img/flow-img1.png" alt="">
             <p>公式LINEのご予約ボタンからご予約、またはインスタDMにてご連絡ください、同時に体調面、アレルギーの確認などもさせて頂きます。</p>
-            <img src="img/triangle-right.png" alt="" class="arrow">
+            <img src="img/triangle-right.png" alt="" class="arrow pc">
+            <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
           <div class="flow">
             <h3>ご対面</h3>
             <img src="img/flow-img2.png" alt="">
             <p>いよいよわんちゃんとのお顔合わせ!ご来店される場合にはまずは安心できる場所かどうかわんちゃんにじっくりクンクンして頂き、お声かけしながらマッサージを受ける準備をわんちゃんにして頂きます。</p>
-            <img src="img/triangle-right.png" alt="" class="arrow">
+            <img src="img/triangle-right.png" alt="" class="arrow pc">
+            <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
           <div class="flow">
             <h3>カウンセリング</h3>
             <img src="img/flow-img3.png" alt="">
             <p>飼い主さんに事前にいただいたご体調の確認をもとに気になっているお身体のことを聞かせて頂きます。実際に気になっているところを飼い主さんに触っていただいたり、一緒にわんちゃんの体調、お身体の調子を確認していきます。</p>
-            <img src="img/triangle-right.png" alt="" class="arrow">
+            <img src="img/triangle-right.png" alt="" class="arrow pc">
+            <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
           <div class="flow">
             <h3>施術</h3>
             <img src="img/flow-img4.png" alt="">
             <p>わんちゃんにお声かけしながらマッサージしていきます。その間飼い主さんはトロン顔をじっくり見るも良し、写真を撮るも良し。普段のわんちゃんの散歩の様子や、生活習慣などもお伺いしながらマッサージしていきます。</p>
-            <img src="img/triangle-right.png" alt="" class="arrow">
+            <img src="img/triangle-right.png" alt="" class="arrow pc">
+            <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
           <div class="flow">
             <h3>アフター<br>カウンセリング</h3>
             <img src="img/flow-img5.png" alt="">
             <p>マッサージ中に気づいたお身体の特徴や、気になるところを飼い主さんにお伝えします。また、お家で飼い主さんができるケアの方法や気をつけておくことなどもお伝えします。</p>
-            <img src="img/triangle-right.png" alt="" class="arrow">
+            <img src="img/triangle-right.png" alt="" class="arrow pc">
+            <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
           <div class="flow">
             <h3>お会計・次回のご予約</h3>
@@ -415,7 +445,9 @@
     </div>
   </section>
 
-  <img src="img/bg-wabe2.png" alt="">
+  <div class="wave-img-wrapper">
+    <img src="img/bg-wabe2.png" alt="">
+  </div>
 
   <section class="customer-voice">
     <div class="container">
@@ -511,7 +543,10 @@
     </div>
   </section>
 
-  <img src="img/bg-arrow.png" alt="">
+  <div class="arrow-bgimg-wrapper">
+    <img class="pc" src="img/bg-arrow.png" alt="">
+    <img class="sp" src="img/bg-arrow-sp.png" alt="">
+  </div>
 
   <section class="faq">
     <div class="container">
