--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
     <div class="container pc">
       <div class="wrapper">
         <h1>
-          <a href="">
+          <a href="#">
             <img src="img/logo.png" alt="こころえくれれ ペットマッサージ 福岡">
           </a>
         </h1>
         <nav>
           <ul>
             <li>
-              <a href="">サロンについて</a>
+              <a href="#about">サロンについて</a>
             </li>
             <li>
-              <a href="">サービス内容</a>
+              <a href="#service">サービス内容</a>
             </li>
             <li>
-              <a href="">施術の流れ</a>
+              <a href="#flow">施術の流れ</a>
             </li>
             <li>
-              <a href="">お客様の声</a>
+              <a href="#voice">お客様の声</a>
             </li>
             <li>
-              <a href="">よくあるご質問</a>
+              <a href="#faq">よくあるご質問</a>
             </li>
             <li>
-              <a href="">公式サイト</a>
+              <a href="https://www.cocoroekurere.com/">公式サイト</a>
             </li>
           </ul>
         </nav>
@@ -69,22 +69,22 @@
           <a href="#about"> <span></span> サロンについて <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#works"> <span></span> サービス内容 <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#service"> <span></span> サービス内容 <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#service"> <span></span> 施術の流れ <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#flow"> <span></span> 施術の流れ <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#media"> <span></span> お客様の声 <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#voice"> <span></span> お客様の声 <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#partner"> <span></span> よくあるご質問 <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="#faq"> <span></span> よくあるご質問 <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#partner"> <span></span> 公式サイト <i class="fa-solid fa-chevron-right"></i></a>
+          <a href="https://www.cocoroekurere.com/"> <span></span> 公式サイト <i class="fa-solid fa-chevron-right"></i></a>
         </li>
         <li>
-          <a href="#contact" target="_blank" rel="noopener noreferrer">お問い合わせ</a>
+          <a href="#contact" target="_blank" rel="noopener noreferrer">ご予約はこちら</a>
         </li>
       </ul>
     </nav>
@@ -97,16 +97,16 @@
           <img src="img/fv-img.png" alt="">
         </div>
         <div class="text-wrapper">
-          <img src="img/fv-text.png" alt="福岡のペットマッサージサロン・こころえくれれ">
+          <img class="top-animation-target to-up" src="img/fv-text.png" alt="福岡のペットマッサージサロン・こころえくれれ">
           <h2>
-            <span class="first">健康と笑顔を守れるのは</span><br>
-            <span class="second">「家族だけ」</span>
+            <span class="first top-animation-target to-up">健康と笑顔を守れるのは</span><br>
+            <span class="second top-animation-target to-up">「家族だけ」</span>
           </h2>
         </div>
         <div class="footprint">
           <img src="img/footprints-right.png" alt="">
         </div>
-        <div class="fv-banner">
+        <div class="fv-banner animation-target to-up">
           <a href="">
             <img src="img/btn-banner.png" alt="">
           </a>
@@ -122,13 +122,13 @@
           <img src="img/fvimg-sp.png" alt="">
         </div>
         <div class="text-wrapper">
-          <img src="img/fv-text.png" alt="福岡のペットマッサージサロン・こころえくれれ">
+          <img class="top-animation-target-sp to-up" src="img/fv-text.png" alt="福岡のペットマッサージサロン・こころえくれれ">
           <h2>
-            <span class="first">健康と笑顔を守れるのは</span><br>
-            <span class="second">「家族だけ」</span>
+            <span class="first top-animation-target-sp to-up">健康と笑顔を守れるのは</span><br>
+            <span class="second top-animation-target-sp to-up">「家族だけ」</span>
           </h2>
         </div>
-        <div class="fv-banner">
+        <div class="fv-banner animation-target to-up">
           <a href="">
             <img src="img/btn-banner.png" alt="">
           </a>
@@ -145,7 +145,7 @@
           <img src="img/border-onayami.png" alt="">
         </div>
         <div class="content-wrapper">
-          <div class="above-wrapper">
+          <div class="above-wrapper animation-target to-up">
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
               <p>飼い主を見上げて<br>よく目が合う</p>
@@ -163,7 +163,7 @@
               <p>お留守番が多い</p>
             </div>
           </div>
-          <div class="bottom-wrapper">
+          <div class="bottom-wrapper animation-target to-up">
             <div class="content">
               <img src="img/onayami-circle.png" alt="circle">
               <p>人にも犬にも<br>よく吠える</p>
@@ -187,7 +187,7 @@
     </div>
   </section>
 
-  <section class="message">
+  <section id="about" class="message animation-target to-up">
     <div class="container">
       <div class="wrapper">
         <img class="pc" src="img/bg-message.png" alt="">
@@ -229,27 +229,27 @@
         <div class="content-wrapper">
           <img src="img/6points.png" alt="こころえくれれの6つのこだわり">
           <div class="text-content-wrapper">
-            <div class="content">
+            <div class="content animation-target to-up">
               <img src="img/point1.png" alt="知識ある手で大切なわんちゃんを担当">
               <p>ペット解剖学を基礎から学んだセラピストが担当。経絡やリンパ、骨、筋肉を把握して優しい適切なタッチでマッサージさせて頂きます。</p>
             </div>
-            <div class="content">
+            <div class="content animation-target to-up">
               <img src="img/point2.png" alt="5,000人以上の人間の身体のお悩みを解決した実績">
               <p>スパセラピスト国際ライセンスを持つセラピストとして、10年以上お客様のお身体とお悩みに日々向き合ってきました。わんちゃんの変化を敏感に感じることに自信があります。</p>
             </div>
-            <div class="content">
+            <div class="content animation-target to-up">
               <img src="img/point3.png" alt="完全オーダーメイドのマッサージ">
               <p>わんちゃんと飼い主さんの日常や現在の身体の状態を手で把握しながら、毎回同じではなくその時々に必要な施術をします。マッサージ中の短時間でも変化に気づき、表情や鳴き声にまで気を配ります。</p>
             </div>
-            <div class="content">
+            <div class="content animation-target to-up">
               <img src="img/point4.png" alt="ご挨拶から始めるコミュニケーション">
               <p>色んな性格のわんちゃんに合わせて、まずはそっとご挨拶から。ちょっと人見知りなわんちゃんでも、元気なわんちゃんでも様子を見ながらご挨拶させて頂きます。</p>
             </div>
-            <div class="content">
+            <div class="content animation-target to-up">
               <img src="img/point5.png" alt="日常を尊重するアフターカウンセリング">
               <p>アフターカウンセリングでは「お仕事で忙しい」「わんちゃんの散歩でしか時間がとれない」といった日常を尊重したアドバイスをお伝えします。</p>
             </div>
-            <div class="content">
+            <div class="content animation-target to-up">
               <img src="img/point6.png" alt="身体を大切にするご褒美おやつ">
               <p>マッサージ終了後に水分補給も兼ねたおやつをご提供。身体に良いものをしっかり循環させ、より免疫力を向上させたり、身体が柔軟かつ心地良くなるようなサポートをさせて頂きます。</p>
             </div>
@@ -283,7 +283,7 @@
           <h2>セラピストのご紹介</h2>
           <img src="img/border-therapist.png" alt="">
         </div>
-        <div class="content-wrapper">
+        <div class="content-wrapper animation-target to-up">
           <img src="img/therapist-img.png" alt="吉開 美咲">
           <div class="text-wrapper">
             <p class="name"><span>吉開 美咲</span><span>Misaki Yoshigai</span></p>
@@ -301,14 +301,14 @@
     </div>
   </section>
 
-  <section class="service">
+  <section id="service" class="service">
     <div class="container">
       <div class="wrapper">
         <div class="sec-header">
           <h2>サービス内容</h2>
         </div>
         <div class="service-wrapper">
-          <div class="service">
+          <div class="service animation-target to-up">
             <p class="info">【2024年限定価格】</p>
             <div class="service-name">
               <p>わんちゃん健やか</p>
@@ -327,7 +327,7 @@
             </ul>
             <p class="text">リンパの流れに沿って優しく撫で、老廃物を流れをサポートします。優しく軽いタッチでツボも刺激し、わんちゃんのお悩みが少しでも解決できるよう、改善点を探しながらオーダーメイドで施術していきます。</p>
           </div>
-          <div class="service">
+          <div class="service animation-target to-up">
             <p class="info">【9月開始】</p>
             <div class="service-name">
               <p><br class="pc">動物温灸<br class="pc"></p>
@@ -345,7 +345,7 @@
             <p class="text">リラックスをする神経(副交感神経)を
             刺激し、リンパ球を増大させ、病気に負けない身体づくりを助けると言われている温熱療法の一つ「温灸」。温灸を動物へ安全に取り扱い、かつ経絡に沿って施術をしていきます。</p>
           </div>
-          <div class="service">
+          <div class="service animation-target to-up">
             <p class="info">【2024年限定価格】</p>
             <div class="service-name">
               <p>わんちゃん＋飼い主さん</p>
@@ -391,7 +391,7 @@
     <img src="img/bg-wabe1.png" alt="">
   </div>
 
-  <section class="flow">
+  <section id="flow" class="flow">
     <div class="container">
       <div class="wrapper">
         <div class="sec-header">
@@ -399,42 +399,42 @@
           <img src="img/border-flow.png" alt="">
         </div>
         <div class="flow-wrapper">
-          <div class="flow">
+          <div class="flow animation-target to-show">
             <h3>ご予約</h3>
             <img src="img/flow-img1.png" alt="">
             <p>公式LINEのご予約ボタンからご予約、またはインスタDMにてご連絡ください、同時に体調面、アレルギーの確認などもさせて頂きます。</p>
             <img src="img/triangle-right.png" alt="" class="arrow pc">
             <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
-          <div class="flow">
+          <div class="flow animation-target to-show">
             <h3>ご対面</h3>
             <img src="img/flow-img2.png" alt="">
             <p>いよいよわんちゃんとのお顔合わせ!ご来店される場合にはまずは安心できる場所かどうかわんちゃんにじっくりクンクンして頂き、お声かけしながらマッサージを受ける準備をわんちゃんにして頂きます。</p>
             <img src="img/triangle-right.png" alt="" class="arrow pc">
             <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
-          <div class="flow">
+          <div class="flow animation-target to-show">
             <h3>カウンセリング</h3>
             <img src="img/flow-img3.png" alt="">
             <p>飼い主さんに事前にいただいたご体調の確認をもとに気になっているお身体のことを聞かせて頂きます。実際に気になっているところを飼い主さんに触っていただいたり、一緒にわんちゃんの体調、お身体の調子を確認していきます。</p>
             <img src="img/triangle-right.png" alt="" class="arrow pc">
             <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
-          <div class="flow">
+          <div class="flow animation-target to-show">
             <h3>施術</h3>
             <img src="img/flow-img4.png" alt="">
             <p>わんちゃんにお声かけしながらマッサージしていきます。その間飼い主さんはトロン顔をじっくり見るも良し、写真を撮るも良し。普段のわんちゃんの散歩の様子や、生活習慣などもお伺いしながらマッサージしていきます。</p>
             <img src="img/triangle-right.png" alt="" class="arrow pc">
             <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
-          <div class="flow">
+          <div class="flow animation-target to-show">
             <h3>アフター<br>カウンセリング</h3>
             <img src="img/flow-img5.png" alt="">
             <p>マッサージ中に気づいたお身体の特徴や、気になるところを飼い主さんにお伝えします。また、お家で飼い主さんができるケアの方法や気をつけておくことなどもお伝えします。</p>
             <img src="img/triangle-right.png" alt="" class="arrow pc">
             <img src="img/triangle-down.png" alt="" class="arrow sp">
           </div>
-          <div class="flow">
+          <div class="flow animation-target to-show">
             <h3>お会計・次回のご予約</h3>
             <img src="img/flow-img6.png" alt="">
             <p>お会計は現金又はPayPay、15,000円以上はカード決済も可能です。次回のご予約は身体の具合や目的にもよりますが、2週間又は1ヶ月間隔でのご予約がおすすめです。</p>
@@ -449,7 +449,7 @@
     <img src="img/bg-wabe2.png" alt="">
   </div>
 
-  <section class="customer-voice">
+  <section id="voice" class="customer-voice">
     <div class="container">
       <div class="wrapper">
         <div class="sec-header">
@@ -548,7 +548,7 @@
     <img class="sp" src="img/bg-arrow-sp.png" alt="">
   </div>
 
-  <section class="faq">
+  <section id="faq" class="faq">
     <div class="container">
       <div class="wrapper">
         <div class="sec-header">
@@ -556,17 +556,17 @@
           <img src="img/border-faq.png" alt="">
         </div>
         <ul class="faq-wrapper">
-          <li>
+          <li class="animation-target to-up">
             <p>出張費用はいくらかかりますか？</p>
             <img src="img/dots-faq.png" alt="">
             <p>1箇所につきわんちゃんのみの場合は500円、飼い主さんのマッサージもある場合は1000円(八女市内500円)頂戴します。</p>
           </li>
-          <li>
+          <li class="animation-target to-up">
             <p>猫は大丈夫でしょうか？</p>
             <img src="img/dots-faq.png" alt="">
             <p>ねこちゃんは警戒心の強い子も多く、現在、ねこちゃんにマッサージの提供はしていません。しかし、ねこちゃんへのマッサージも非常に有効なため、飼い主さんへzoomでのマッサージレクチャーを予定しております。又、ねこちゃんへは肉球診断をしておりますのでお気軽にお問い合わせください。</p>
           </li>
-          <li>
+          <li class="animation-target to-up">
             <p>ビビりな子、よく吠える子でも大丈夫でしょうか？</p>
             <img src="img/dots-faq.png" alt="">
             <p>問題ありません。わんちゃんへ安心感が与えられるよう配慮し、わんちゃんのペースにも寄り添えるよう心がけています。逆にその問題が良い方向へ改善するお手伝いもできる可能性があるので、不安なことがある場合は何でも事前にお話しください。</p>
@@ -676,28 +676,28 @@
       <div class="wrapper">
         <nav>
           <div class="logo">
-            <a href="">
+            <a href="#">
               <img src="img/footer-logo.png" alt="こころえくれれ オーダーメイドマッサージ&メンテナンス">
             </a>
           </div>
           <ul>
             <li>
-              <a href="">サロンについて</a>
+              <a href="#about">サロンについて</a>
             </li>
             <li>
-              <a href="">サービス内容</a>
+              <a href="#service">サービス内容</a>
             </li>
             <li>
-              <a href="">施術の流れ</a>
+              <a href="#flow">施術の流れ</a>
             </li>
             <li>
-              <a href="">お客様の声</a>
+              <a href="#voice">お客様の声</a>
             </li>
             <li>
-              <a href="">よくあるご質問</a>
+              <a href="#faq">よくあるご質問</a>
             </li>
             <li>
-              <a href="">公式サイト</a>
+              <a href="https://www.cocoroekurere.com/">公式サイト</a>
             </li>
             <li>
               <a href="">ご予約はこちら</a>
